stacks/idp-stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: IDP stack

Resources:

  # Configure load balancer for IDP service

  # Need to eventually open up from any client needing to communicate with IDP

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: IDP load balancer security group
      VpcId: !ImportValue shared-services-stack-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !ImportValue ansible-controller-stack-SecurityGroupId
          Description: Allow inbound HTTP
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic to anywhere
      Tags:
        - Key: Name
          Value: "idp-load-balancer-sg"

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: "keycloak-idp-load-balancer"
      IpAddressType: ipv4
      Scheme: internal
      Type: network
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Subnets:
        - !ImportValue shared-services-stack-IngressSubnet1Id
        - !ImportValue shared-services-stack-IngressSubnet2Id

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: "keycloak-idp-target-group"
      TargetType: ip
      Port: 80
      Protocol: TCP
      Targets: []
      HealthCheckEnabled: true
      HealthCheckPort: traffic-port
      HealthCheckProtocol: TCP
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      VpcId: !ImportValue shared-services-stack-VpcId

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Port: 80
      Protocol: TCP
      LoadBalancerArn: !Ref LoadBalancer
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward

  ServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: IDP service security group
      VpcId: !ImportValue shared-services-stack-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
          Description: Allow inbound HTTP
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic to anywhere
      Tags:
        - Key: Name
          Value: "idp-service-sg"

  # When using Fargate, the container and host ports must be the same.

  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Cpu: 512
      Memory: 2048
      EnableFaultInjection: false
      ExecutionRoleArn: !Sub "arn:aws:iam::${AWS::AccountId}:role/ecs-task-execution-role"
      Family: web
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      ContainerDefinitions:
        - Name: httpd
          Image: "docker.io/library/httpd:2.4.68"
          Cpu: 0
          Essential: true
          PortMappings:
            - Name: httpd-80-tcp
              AppProtocol: http
              ContainerPort: 80
              HostPort: 80
              Protocol: tcp
      Tags:
        - Key: Name
          Value: "httpd-ecs-task-definition"

  # TODO: How to generalize the task definition revision?

  # Load balancer name was wrong.

  # ECSService:
  #   Type: AWS::ECS::Service
  #   Properties:
  #     Cluster: shared-services-ecs-cluster
  #     TaskDefinition: !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:task-definition/web:9"
  #     LaunchType: FARGATE
  #     ServiceName: web-service
  #     SchedulingStrategy: REPLICA
  #     DesiredCount: 1
  #     AvailabilityZoneRebalancing: ENABLED
  #     LoadBalancers:
  #       - ContainerName: httpd
  #         ContainerPort: 80
  #         LoadBalancerName: !Ref LoadBalancer
  #         TargetGroupArn: !Ref TargetGroup
  #     NetworkConfiguration:
  #       AwsvpcConfiguration:
  #         AssignPublicIp: DISABLED
  #         SecurityGroups:
  #           - !Ref ServiceSecurityGroup
  #         Subnets:
  #           - !ImportValue shared-services-stack-AppSubnet1Id
  #           - !ImportValue shared-services-stack-AppSubnet2Id
  #     PlatformVersion: LATEST
  #     DeploymentConfiguration:
  #       DeploymentCircuitBreaker:
  #         Enable: true
  #         Rollback: true
  #       Strategy: ROLLING
  #       MaximumPercent: 200
  #       MinimumHealthyPercent: 100
  #     DeploymentController:
  #       Type: ECS
  #     ServiceConnectConfiguration:
  #       Enabled: false
  #     EnableECSManagedTags: true
  #     EnableExecuteCommand: false
  #     Tags: []
